telecom-bretagne/javacompiler/SecondPhase/tests/Fail/TestMethodModifFail2.java
class A {}
class B {
	private abstract int test(int var);
}
